--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -24,7 +24,11 @@
       <tbody>
         <tr th:each="board : ${list}" th:attr="id=${board.id}">
           <td th:text="${board.id}"></td>
-          <td th:text="${board.title}"></td>
+          <td>
+            <a th:href="'/board/' + ${board.id}">
+              [[ ${board.title} ]]
+            </a>
+          </td>
           <td th:text="${board.userId}"></td>
         </tr>
       </tbody>
