--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -29,7 +29,7 @@
               [[ ${board.title} ]]
             </a>
           </td>
-          <td th:text="${board.userId}"></td>
+          <td th:text="${board.user.email}"></td>
         </tr>
       </tbody>
     </table>
