--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -34,7 +34,7 @@
         <a class="nav-link" href="#" id="update">수정</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" id="delete" th:num="${board.id}">삭제</a>
+        <a class="nav-link" href="#/board/update/${board.id}" id="delete" th:num="${board.id}">삭제</a>
       </li>
     </ul>
   </div>
