--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -31,10 +31,10 @@
         <a class="nav-link" href="#" id="list">목록</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" id="update">수정</a>
+        <a class="nav-link" th:href="'/board/update/' + ${board.id}" id="update">수정</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#/board/update/${board.id}" id="delete" th:num="${board.id}">삭제</a>
+        <a class="nav-link" href="#" id="delete" th:num="${board.id}">삭제</a>
       </li>
     </ul>
   </div>
