수정, 삭제 기능

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -40,6 +40,13 @@
   document.querySelector('#write-btn').addEventListener('click', () => {
     location = '/board/write';
   });
+  const trs = document.querySelectorAll('tbody > tr');
+  trs.forEach(v => {
+    v.addEventListener('click', () => {
+      const id = v.getAttribute('id');
+      location = `/board/${id}`;
+    })
+  })
 </script>
 
 <div th:replace="common/footer">
