--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -32,18 +32,27 @@
       <a class="nav-link" th:href="'/board/update/' + ${board.id}" id="update">수정</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#" id="delete" th:num="${board.id}">삭제</a>
+      <a class="nav-link" th:href="'/board/delete/' + ${board.id}" id="delete" th:num="${board.id}">삭제</a>
     </li>
   </ul>
 </div>
 <script>
-  document.querySelector('#delete').addEventListener('click', (e) => {
-    e.preventDefault();
-    if(confirm('삭제하시겠습니까?')) {
-      const num = e.target.getAttribute('num');
-      location = `/board/delete/${num}`;
+  const delBtn = document.querySelector('[id=delete]');
+  delBtn.addEventListener('click', (event) => {
+    event.prevenDefault();
+    const yesno = confirm("삭제??");
+    if(yesno) {
+      location = "/board/delete/[[ ${board.id} ]]";
     }
   });
+
+  // document.querySelector('#delete').addEventListener('click', (e) => {
+  //   e.preventDefault();
+  //   if(confirm('삭제하시겠습니까?')) {
+  //     const num = e.target.getAttribute('num');
+  //     location = `/board/delete/${num}`;
+  //   }
+  // });
 </script>
 
 <div th:replace="common/footer">
