--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -38,6 +38,13 @@
       </li>
     </ul>
   </div>
+
+  <!-- 댓글 입력 폼 -->
+  <form action="">
+    <input type="text">
+    <button>댓글 작성</button>
+  </form>
+
   <script>
     const delBtn = document.querySelector('[id=delete]');
     delBtn.addEventListener('click', (event) =>
