--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -41,7 +41,7 @@
 
   <!-- 댓글 입력 폼 -->
   <form action="">
-    <input type="text">
+    <input type="text" name="comment">
     <button>댓글 작성</button>
   </form>
 
