--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -40,7 +40,8 @@
   </div>
 
   <!-- 댓글 입력 폼 -->
-  <form action="">
+  <form action="/board/comment/add" method="post">
+    <input type="hidden" name="boardId" th:value="${board.id}">
     <input type="text" name="comment">
     <button>댓글 작성</button>
   </form>
