--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -49,6 +49,7 @@
   <ul>
     <li th:each="comment : ${board.comments}">
       [[ ${comment.comment} ]] / [[ ${comment.user.name} ]]
+      <button th:onclick="location='/board/comment/remove?id=[[${comment.id}]]'">삭제</button>
     </li>
   </ul>
   <script>
