--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -48,6 +48,8 @@
   <li th:each="comment : ${board.comments}">
     [[ ${comment.comment} ]] / [[ ${comment.user.name} ]]
     <button 
+      th:onclick="location='/board/comment/remove?id=[[${comment.id}]]'">삭제</button>
+    <button 
       th:onclick="location='/board/comment/remove/[[${comment.id}]]'">삭제</button>
   </li>
 </ul>
