--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -38,7 +38,7 @@
         </tbody>
       </table>
 
-      <a href="" th:each=" 변수 : ${#numbers.sequence(start, end)} ">
+      <a href="/board/list?page=${num}" th:each=" 변수 : ${#numbers.sequence(start, end)} ">
         [[ ${num} ]]
       </a>
 
