페이지네이션 완성 - 디자인 빼고...

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -35,7 +35,8 @@
       </tbody>
     </table>
     
-    <a href="" th:each=" num : ${#numbers.sequence(start, end)} ">
+    <a th:href="'/board/list?page=' + ${num}" 
+       th:each="num : ${#numbers.sequence(start, end)}">
       [[ ${num} ]]
     </a>
 
