--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -34,11 +34,19 @@
         </tr>
       </tbody>
     </table>
-    
-    <a th:href="'/board/list?page=' + ${num}" 
-       th:each="num : ${#numbers.sequence(start, end)}">
-      [[ ${num} ]]
-    </a>
+    <!-- 페이지네이션 -->
+    <ul class="pagination">
+      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+
+      <li class="page-item" th:each="num : ${#numbers.sequence(start, end)}">
+        <a class="page-link" th:href="'/board/list?page=' + ${num}">
+          [[ ${num} ]]
+        </a>
+      </li>
+
+      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+    <!-- 페이지네이션 끝 -->
 
     <button type="button" class="btn btn-primary btn-block" id="write-btn">글쓰기</button>
   </div>
