--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -23,6 +23,7 @@
         <h6 class="card-subtitle mb-2 text-muted" th:text="${board.user.email}"></h6>
         <p class="card-text" th:text="${board.content}"></p>
       </div>
+      <img th:src="${board.atchFiles[0].filePath}">
     </div>
   </div>
   <div class="container mt-5">
