--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -20,11 +20,11 @@
       <form method="post" action="/board/write" enctype="multipart/form-data">
         <div class="mb-3">
           <label for="title">Title:</label>
-          <input type="text" class="form-control" id="title" name="title">
+          <input type="text" class="form-control" id="title" name="title" required>
         </div>
         <div class="mb-3">
           <label for="content">Content:</label>
-          <textarea class="form-control" rows="5" name="content" id="content"></textarea>
+          <textarea class="form-control" rows="5" name="content" id="content" required></textarea>
         </div>
         <div class="mb-3">
           <label for="content">파일첨부:</label>
