--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -28,7 +28,7 @@
         </div>
         <div class="mb-3">
           <label for="content">파일첨부:</label>
-          <input class="form-control" name="file" id="file" type="file">
+          <input class="form-control" name="file" id="file" type="file" accept="image/*">
         </div>
         <div class="d-grid gap-2">
           <button class="btn btn-primary" id="complete">글쓰기</button>
